--- a/image-upload/views/index.hbs
+++ b/image-upload/views/index.hbs
@@ -1,2 +1,9 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1>Movies</h1>
+
+{{#each movies}}
+<h4>{{title}}</h4>
+<p>{{description}}</p>
+<img src="{{imgPath}}" alt="poster for {{title}}">
+{{/each}}
+
+<a href="/movie/add">Add a new movie</a>
