--- a/image-upload/views/movie-add.hbs
+++ b/image-upload/views/movie-add.hbs
@@ -1,5 +1,5 @@
 <h2>Upload a movie</h2>
-<form action="/movie/add" method="POST">
+<form action="/movie/add" method="POST" enctype="multipart/form-data">
 
   <label for="title">Title: </label>
   <input type="text" name="title" id="title">
@@ -7,7 +7,8 @@
   <label for="description">Description: </label>
   <input type="text" name="description" id="description">
 
-
+  <label for="photo">Poster: </label>
+  <input type="file" name="photo" id="photo">
 
   <button type="submit">Create the movie</button>
 </form>
