--- a/image-upload/views/index.hbs
+++ b/image-upload/views/index.hbs
@@ -1,9 +1,17 @@
-<h1>Movies</h1>
-
-{{#each movies}}
-<h4>{{title}}</h4>
-<p>{{description}}</p>
-<img src="{{imgPath}}" alt="poster for {{title}}">
-{{/each}}
-
-<a href="/movie/add">Add a new movie</a>
+<h1>Best Movies of the World 🍿 🎥</h1>
+<div class="movies-wrapper">
+  {{#each movies}}
+    <div class="movie-item">
+      <h2>{{title}}</h2>
+      <h4>{{description}}</h4>
+      <img src="{{imgPath}}">
+      <h3>
+        Delete this movie
+        <a href="/movie/delete/{{_id}}">❌</a>
+      </h3>
+    </div>
+  {{else}}
+  <p>There are no movies yet! 🤷‍♀️ 🤷‍♂️</p>
+  {{/each}}
+</div>
+<a href="/movie/add">Add a movie 🎬</a>
